add: deploy workflow2

--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://micaji-251.github.io/Sem15HReactMovieGallery",
   "name": "movie-search",
   "private": true,
   "version": "0.0.0",
