--- a/package.json
+++ b/package.json
@@ -1,16 +1,19 @@
 {
-  "homepage": "https://micaji-251.github.io/Sem15HReactMovieGallery",
+  "homepage": "https://micaji-251.github.io/Sem15HReactMovieGallery/",
   "name": "movie-search",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
+    "predeploy": "yarn run build",
+    "deploy": "gh-pages -d dist",
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
   "dependencies": {
+    "gh-pages": "^6.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
